examples/test/testpolicy13926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13926
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key27: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value29
          key10: value21
          key43: value9
      podSelector:
        matchLabels:
          key2: value42
